# webserv

./: .gitignore  CMakeLists.txt  HttpSession.hpp  HttpStatusCodes.hpp  Makefile  ParseConf.cpp  ParseConf.hpp  README.md  Request.cpp  Request.hpp  Response.cpp  Response.hpp  Server.cpp  Server.hpp  Session.cpp  Session.hpp  SmartPtr.hpp  SocketTCP.cpp  SocketTCP.hpp  Utils.cpp  Utils.hpp  big_ascii_file.cc  conf  form.html  hello_get.py  home_conf  hosts.sh  howTestWithPython.py  index.html  iter.hpp  main.cpp  max_size_string.cpp  one.hpp  poll.cpp  poll_ex.cpp  push.sh  py.py  rfc_http  seg.sh  select.cpp  (+11 more)
cgi/: checksid.py  hello_get.py  scr.sh  sid.py
err_pages/: 404.html
tmp/: somefile  t.cpp
